# apple-mail-mcp

./: README.md  pyproject.toml
src/apple_mail_mcp/: apple_mail_mcp.py  main.py
